--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <h1 class="title">About me</h1>
         <div class="section-container">
             <div class="section_pic-container">
-                <img src="./assets/about-pic.png" alt="profile2" class="about-pic">
+                <img src="./assets/sami04.png" alt="profile2" class="about-pic">
             </div>
             <div class="about-details-container">
                 <div class="about-containers">
